--- a/index.htm
+++ b/index.htm
@@ -4,39 +4,39 @@
 <html lang="en" manifest="cache.manifest">
 <head>
 	<meta charset="utf-8" />
-	<title>Pacman in HTML 5 Canvas</title>
+	<title>Subquery PacIndexer</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="pacman-canvas.css">
 	<link rel="manifest" href="manifest.json">
 
 
 	<!-- SEO Stuff -->
-    <meta name="description" content="Play Pacman Canvas for free on your desktop or mobile. This whole game is open source an was created in HTML5." />
-    <link rel="canonical" href="http://pacman.platzh1rsch.ch/" />
-    <meta name="author" content="platzh1rsch.ch" />
-    <meta name="publisher" content="platzh1rsch.ch" />
-    <meta name="copyright" content="&copy; Copyright (c) platzh1rsch.ch" />
+    <meta name="description" content="Play PacIndexer for free on your desktop or mobile. This whole game is open source and was created in HTML5." />
+    <link rel="canonical" href="https://pacindexer.freecluster.eu/" />
+    <meta name="author" content="Counterpoint Software" />
+    <meta name="publisher" content="Counterpoint Software" />
+    <meta name="copyright" content="&copy; Copyright (c) Counterpoint Software" />
     <meta name="robots" content="index,follow" />
-    <meta http-equiv="content-language" content="de">
-    <meta name="language" content="de">
+    <meta http-equiv="content-language" content="en">
+    <meta name="language" content="en">
     <meta name="page-topic" content="Games/Arcade" />
 
     <meta content="National" name="distribution" />
-    <meta content="pacman.platzh1rsch.ch" name="target" />
+    <meta content="pacindexer.freecluster.eu" name="target" />
 
    	<!-- Facebook Open Graph Information -->
-	<meta property="og:image" content="http://pacman.platzh1rsch.ch/img/Icon-200x200.png"/>
-    <meta property="og:title" content="Pacman Canvas in HTML5" />
-	<meta property="og:description" content="Play Pacman Canvas for free on your desktop or mobile. This whole game is open source an was created in HTML5." />
-    <meta property="og:url" content="http://pacman.platzh1rsch.ch/" />
-    <meta property="og:site_name" content="Pacman Canvas in HTML5" />
+	<meta property="og:image" content="https://pacindexer.freecluster.eu/img/Icon-200x200.png"/>
+    <meta property="og:title" content="PacIndexer" />
+	<meta property="og:description" content="Play PacIndexer for free on your desktop or mobile. This whole game is open source an was created in HTML5." />
+    <meta property="og:url" content="https://pacindexer.freecluster.eu/" />
+    <meta property="og:site_name" content="PacIndexer" />
 	<meta property="og:locale" content="en_US" />
 
 	<!-- site icons -->
 	<link rel="shortcut icon" href="img/Icon-130x130.png" />
 	<link rel="apple-touch-icon" href="img/Icon-130x130.png" />
 
-    <meta property="og:image" content="http://pacman.platzh1rsch.ch/img/Icon-130x130.png"/>
+    <meta property="og:image" content="https://pacindexer.freecluster.eu/img/Icon-130x130.png"/>
 
 	<!-- AppsFuel verification code -->
 	<meta name="appsfuel_code" content="83d3cedc1050a5c"/>
@@ -50,22 +50,6 @@
 	<!-- Script -->
 	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
 	<script src="js/jquery.hammer.min.js" type="text/javascript"></script>
-	
-	<!-- Google Analytics -->
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-28993174-1']);
-	  _gaq.push(['_setDomainName', 'pacman.platzh1rsch.ch']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
 	
 </head>
 
@@ -101,28 +85,30 @@
 		<h1>Instructions</h1>
 		<div class="nomobile">
 			<h2>Controls</h2>
-			<p>Use your arrow keys or [W,A,S,D] keys to navigate pacman.</p>
+			<p>You control our hero - PacIndexer. He is dedicated to collecting the white pills which represent data from multiple chains. Eating the pills causes him to transform and store the raw chain data.</p>
+			<p>Use your arrow keys or [W,A,S,D] keys to navigate PacIndexer.</p>
 			<p>To pause / resume the game press [SPACE] or [ESC] or just click into the game area.</p>
 		</div>
 		<div class="mobile">
 			<h2>Controls</h2>
-			<p>Use swipe gestures to navigate pacman.</p>
-			<p>Alternatively use the Arrow Buttons underneath the game area to navigate pacman.</p>
+			<p>You control our hero - PacIndexer. He is dedicated to collecting the white pills which represent data from multiple chains. Eating the pills causes him to transform and store the raw chain data.</p>
+			<p>Use swipe gestures to navigate PacIndexer.</p>
+			<p>Alternatively use the Arrow Buttons underneath the game area to navigate PacIndexer.</p>
 			<p>To pause / resume the game, touch the game area once.</p>
 		</div>
 
 		<div>
 			<h2>Ghosts</h2>
-			<p>Ghosts are creatures that hunt pacman and will kill him if they catch him.</p>
-			<p>Every ghost has its own strategy to chase down pacman.</p>
+			<p>Ghosts are creatures that hunt PacIndexer and will kill him if they catch him. They represent slow data response times.</p>
+			<p>Every ghost has its own strategy to chase down PacIndexer.</p>
 			<h3>Inky<img src="img/inky.svg" class="pull-right"></h3>
-			Inky will stay in the ghost house until pacman has eaten at least 30 pills.	His home is the bottom right corner.
+			Inky will stay in the ghost house until PacIndexer has eaten at least 30 pills.	His home is the bottom right corner.
 			<h3>Blinky <img src="img/blinky.svg" class="pull-right"></h3>
-			Blinky is the most agressive of the 4 ghosts. He will start chasing pacman right away, and aim directly at him. His home is the upper right corner.
+			Blinky is the most agressive of the 4 ghosts. He will start chasing PacIndexer right away, and aim directly at him. His home is the upper right corner.
 			<h3>Pinky<img src="img/pinky.svg" class="pull-right"></h3>
-			Pinky will start chasing pacman right away, he will always aim 4 fields ahead and 4 fields left of pacman. His home is the upper left corner.
+			Pinky will start chasing PacIndexer right away, he will always aim 4 fields ahead and 4 fields left of PacIndexer. His home is the upper left corner.
 			<h3>Clyde<img src="img/clyde.svg" class="pull-right"></h3>
-			Inky will stay in the ghost house until pacman has eaten at least 2/3 of all pills. His home is the bottom left corner.
+			Inky will stay in the ghost house until PacIndexer has eaten at least 2/3 of all pills. His home is the bottom left corner.
 		</div>
 
 		<div>
@@ -132,18 +118,18 @@
 			<p>This is the default mood. When ghosts are in scatter mood, they will just go to their home corner and stay there.</p>
 			<img src="img/instructions/instructions_scatter.PNG">
 			<h3>Chase mood</h3>
-			<p>After a certain time the ghosts change their mood and want to go chasing pacman. This is indicated through the walls turning red.</p>
+			<p>After a certain time the ghosts change their mood and want to go chasing PacIndexer. This is indicated through the walls turning red and represents the situation where CPU load is high and the network is becoming saturated leading to a degradation in service to data consumers.</p>
 			<img src="img/instructions/instructions_chase.PNG">
 		</div>
 
 		<div>
 			<h2>Items</h2>
 			<h3>Pills</h3>
-			<p>The goal of every level is, to eat all the white pills without getting catched by the ghosts. One pill results in 10 points.</p>
+			<p>The goal of every level is, to eat all the white pills without getting caught by the ghosts. One pill results in 10 points.</p>
 			<h3>Powerpills</h3>
-			<p>In every level there are 4 powerpills, which are a bit bigger than the regular ones. If Pacman eats those, he will get strong enough to eat the ghosts. You can see this indicated by the ghosts turning blue. One powerpill results in 50 points.</p>
+			<p>In every level there are 4 powerpills, which are a bit bigger than the regular ones. They represent encountering a chain with a dictionary that can be used and provide PacIndexer with a performance boost that allows PacIndexer to attack the slow response times directly. If PacIndexer eats those, he will get strong enough to eat the ghosts. You can see this indicated by the ghosts turning blue. One powerpill results in 50 points.</p>
 			<img src="img/instructions/instructions_powerpill.PNG">
-			<p>Eating a ghost results in 100 points. The soul of the ghost will return to the ghost house before starting to chase Pacman again.</p>
+			<p>Eating a ghost results in 100 points. The soul of the ghost will return to the ghost house before starting to chase PacIndexer again.</p>
 		</div>
 
 	</div>
@@ -154,7 +140,8 @@
 	<div class="button" id="back">&lt; back</div>
 	<div>
 		<h1>Info</h1>
-		<p>Current Version: <span class="app-version">1.0.5 (2021-03-22)</span></p>
+		<p>Current Version: <span class="app-version">1.0.6 (2022-04-20)</span></p>
+		<p>This game has been adapted for the April 2022 Subquery monthly quest by Jim Counter. The original author and code can be found below - my thanks and appreciation go out to them.</p>
 		<img src="img/platzh1rsch-logo.png">
 		<p>Pacman Canvas is Open Source, written by <a href="http://platzh1rsch.ch">platzh1rsch</a>. You can get the code on <a target="_blank" href="https://github.com/platzhersh/pacman-canvas" target="_blank">github</a>.</p>
 	</div>
@@ -165,19 +152,6 @@
 <!-- main game content -->
 <div class="content" id="game-content">
 
-		<!-- Google AdSense -->
-		<div id="adsense">
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<ins class="adsbygoogle"
-			     style="display:inline-block;width:320px;height:50px"
-			     data-ad-client="ca-pub-0176206735745791"
-			     data-ad-slot="6492298622"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-		</div>
-	
-	
 	<!-- main game content -->
 	<div class="game wrapper">
 	
@@ -192,7 +166,7 @@
 		<div id="canvas-container">
 			<div id="canvas-overlay-container">
 				<div id="canvas-overlay-content">
-					<div id="title">Pacman Canvas</div>
+					<div id="title">Subquery PacIndexer</div>
 					<div><p id="text">Click to Play</p></div>
 				</div>
 			</div>
