Correct SubQuery capitalisation.

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <html lang="en" manifest="cache.manifest">
 <head>
 	<meta charset="utf-8" />
-	<title>Subquery PacIndexer</title>
+	<title>SubQuery PacIndexer</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="pacman-canvas.css">
 	<link rel="manifest" href="manifest.json">
@@ -141,7 +141,7 @@
 	<div>
 		<h1>Info</h1>
 		<p>Current Version: <span class="app-version">1.0.6 (2022-04-20)</span></p>
-		<p>This game has been adapted for the April 2022 Subquery monthly quest by Jim Counter. The original author and code can be found below - my thanks and appreciation go out to them.</p>
+		<p>This game has been adapted for the April 2022 SubQuery monthly quest by Jim Counter. The original author and code can be found below - my thanks and appreciation go out to them.</p>
 		<img src="img/platzh1rsch-logo.png">
 		<p>Pacman Canvas is Open Source, written by <a href="http://platzh1rsch.ch">platzh1rsch</a>. You can get the code on <a target="_blank" href="https://github.com/platzhersh/pacman-canvas" target="_blank">github</a>.</p>
 	</div>
